spvitamin-core compiles with Java 8